02-thirty-days-of-python/day-05/02-conditional-statement.txt
>>> if True:
...    print("hi there")
... 
hi there

>>> if False:
...    print("nothing")
... 

>>> if not False:
...    print("whats up")
... 
whats up

>>> True == False
False

>>> var_ = "this"

>>> True = False
  File "<stdin>", line 1
SyntaxError: cannot assign to True

>>> for = True
  File "<stdin>", line 1
    for = True
        ^
SyntaxError: invalid syntax

>>> 10 > 32
False

>>> 424 < 323433
True

>>> 10 > 32 or 10 < 32
True

>>> not 10 > 32
True

>>> not (10 > 32)
True

>>> 200 > 200
False

>>> 200 >= 200
True

>>> 200 > 200 or 200 == 200
True

>>> true, false
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'true' is not defined

>>> true
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'true' is not defined

>>> str(True).lower() == "true"
True

>>> str("true").title() == "True"
True

>>> str("true")
'true'

>>> "abc".title()
'Abc'

>>> bool(str("true").title())
True

>>> abc = [1,2,3,4,5]

>>> abc_sq = []

>>> for num in abc:
...     new_number = num ** 2
...     abc_sq.append(new_number)
... 

>>> abc_sq
[1, 4, 9, 16, 25]

>>> is_even = []

>>> is_odd = []

>>> for num in abc_sq:
...     if num % 2 == 0:
...        print("this is even") 
...        is_even.append(num)
...     else:
...        is_odd.append(num)
... 
this is even
this is even

>>> print(is_even, is_odd)
[4, 16] [1, 9, 25]

>>> is_factor_of_3 = []

>>> for num in abc_sq:
...    if num % 3 == 0:
...       is_factor_of_3.append(num)
...    elif num % 2 == 0:
...       is_even.append(num)
...    else:
...       is_odd.append(num)
... 

>>> print(is_factor_of_3)
[9]

>>> print(is_even, is_odd)
[4, 16, 4, 16] [1, 9, 25, 1, 25]

>>> is_even = []

>>> is_odd = []

>>> is_factor_of_3 = []

>>> for num in abc_sq:
...     if num % 3 == 0: 
...        is_factor_of_3.append(num)
...     else:
...        if num % 2 == 0:
...           is_even.append(num)
...        else:
...           is_odd.append(num)
... 

>>> print(is_even, is_odd)
[4, 16] [1, 25]

>>> print(is_factor_of_3)
[9]

>>> for num in abc_sq:
...     if num % 3 == 0:
...        is_factor_of_3.append(num)
...     if num % 2 == 0:
...        is_even.append(num)
...     is_odd.append(num)
... 

>>> print(is_even, is_odd)
[4, 16, 4, 16] [1, 25, 1, 4, 9, 16, 25]